# Heuristics-based-on-Adjacency-Graph-Packing-for-DCJ-Distance-Considering-Intergenic-Regions

./: CMakeLists.txt  Makefile  README.md  main.cpp
cycle/: cycles.cpp  cycles.hpp
database/: O10L10.txt  O10L20.txt  O10L30.txt  O10L40.txt  O10L50.txt  O20L10.txt  O20L20.txt  O20L30.txt  O20L40.txt  O20L50.txt  O30L10.txt  O30L20.txt  O30L30.txt  O30L40.txt  O30L50.txt  O40L10.txt  O40L20.txt  O40L30.txt  O40L40.txt  O40L50.txt  O50L10.txt  O50L20.txt  O50L30.txt  O50L40.txt  O50L50.txt
heur/: ga.cpp  ga.hpp  solution.hpp
misc/: genome.cpp  genome.hpp  io.cpp  io.hpp
